infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: noirefield/paimontv-manager-server
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
